# rustfortrack

./: .gitignore  dependecies.txt
rustfortrack/: Cargo.toml  dependecies.txt  namelist.ini
rustfortrack/src/: main.rs
rustfortrack/src/forecast/: forecast_mode.rs  mod.rs
rustfortrack/src/track/: mod.rs  track_mode.rs
rustfortrack/src/utils/: clustering.rs  files_list.rs  files_timestamp.rs  main_bar.rs  mod.rs  netCDF2bin.py  read_bin.rs  thresholding.rs  vectorization.rs  write_matrix_file.rs
rustfortrack/src/utils/old/: clustering_.rs  vectorization_.rs
