[package]
name = "rustfortrack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-ini = "0.18"
glob = "0.3.0"
chrono = "0.4.23"
ndarray = "0.15.6"
opencv = "0.74"
image = "0.13.0"
imageproc = "0.23.0"